[workspace]

members = [
       "aoc",
       "prob1_1",
       "prob1_2",
       "prob2_1",
       "prob2_2",
       "prob3_1",
       "prob3_2",
       "prob4_1",
       "prob4_2",
       "prob5_1",
       "prob5_2",
       "prob6_1",
       "prob6_2",
       "prob7_1",
       "prob7_2",
       "prob8_1",
       "prob8_2",
       "prob9_1",
       "prob9_2",
       "prob10_1",
       "prob10_2",
       "prob11_1",
       "prob11_2",
       "prob12_1",
       "prob12_2",
       "prob13_1",
       "prob13_2",
       "prob14_1",
       "prob14_2",
       "prob15_1",
       "prob15_2",
       "prob16_1",
       "prob16_2",
       "prob17_1",
       "prob17_2",
       "prob18_1",
       "prob18_2",
       "prob19_1",
       "prob19_2",
       "prob20_1",
       "prob20_2",
       "prob21_1",
       "prob21_2",
       "prob22_1",
       "prob22_2",
       "prob23_1",
       "prob23_2",
       "prob24_1",
       "prob24_2",
       "prob25_1",
       "prob25_2",
]
